@@ -18,14 +18,16 @@ from examples.delta_time import time_expression as imported_expr
 # from examples.mozillaCalendarParser import calendars as imported_expr
 # from examples.pgn import pgnGrammar as imported_expr
 # from examples.idlParse import CORBA_IDL_BNF; imported_expr = CORBA_IDL_BNF()
-# from examples.chemicalFormulas import formula as imported_expr
-# from examples.romanNumerals import romanNumeral as imported_expr
+# from examples.chemical_formulas import formula as imported_expr
+# from examples.roman_numerals import roman_numeral as imported_expr
 # from examples.protobuf_parser import parser as imported_expr
 # from examples.parsePythonValue import listItem as imported_expr
 # from examples.one_to_ninety_nine import one_to_99 as imported_expr
 # from examples.simpleSQL import simpleSQL as imported_expr
 # from examples.simpleBool import boolExpr as imported_expr
 # from examples.adventureEngine import Parser; imported_expr = Parser().bnf
+# from examples.lua_parser import lua_script as imported_expr
+
 
 grammar = imported_expr
 
